# sentinel

./: .gitignore  pyproject.toml  sentinel-spec.md
.claude/: settings.local.json
examples/: local_only.py  minimal.py  with_reasoning.py
sentinel/: __init__.py  cli.py  config.py  middleware.py
sentinel/level1/: baseline.py  fingerprint.py  monitor.py
sentinel/level2/: prompts.py  reasoner.py
sentinel/providers/: openai_compat.py
sentinel/proxy/: http.py  jsonrpc.py  stdio.py
tests/: echo_server.py  test_baseline.py  test_fingerprint.py  test_fingerprint_http.py  test_jsonrpc.py  test_reasoner.py
